# puyo-puyo-app

./: .gitignore  README.md  compose.yml  docker-compose.yml  package.json  pnpm-lock.yaml
app/: package-lock.json
app/src/app/: layout.tsx  page.tsx
app/src/app/edit/: page.tsx  presenter.tsx
app/src/components/common/Puyo/: Puyo.stories.tsx  Puyo.tsx
app/src/components/features/Field/: Field.stories.tsx  Field.tsx
app/src/components/features/SelectPuyo/: SelectPuyo.stories.tsx  SelectPuyo.tsx
app/src/interfaces/: FieldInterfaces.ts
app/src/logic/common/: PuyoColor.ts
app/src/logic/common/domain/: coord.ts  puyo-color.ts
app/src/logic/field/: Coord.ts  Field.ts  FieldPuyo.ts  StickTogether.ts
apps/backend/: .gitignore  openapi.json  package.json
apps/backend/src/: app.module.ts  main.ts
apps/backend/src/field/: field.controller.ts  field.service.ts  field.types.ts
apps/backend/src/scripts/: generate-openapi.ts
apps/bff/: .env.example  package.json
apps/bff/src/: app.module.ts  schema.gql
apps/bff/src/utils/: file-util.ts
apps/frontend/: .gitignore  .prettierrc  package.json  vitest.config.ts
apps/frontend/.storybook/: main.ts  preview.tsx
apps/frontend/src/app/: layout.tsx  providers.tsx
apps/frontend/src/interfaces/: EventInterfaces.ts  FieldInterfaces.ts  OjamaInterfaces.ts
apps/puyo-image-service/: .gitignore  main.py  pyproject.toml
apps/puyo-image-service/scripts/: generate_proto.py
frontend/: Dockerfile
frontend/app/: package.json
frontend/app/src/interfaces/: FieldPuyoInterfaces.ts
(+78 files in other folders)
